Fix horizontal scrolling, center radio buttons to respond on mobile and tablet, hide logo on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   text-transform: capitalize;
   text-indent: 50px;
   padding-top: 100px;
-  font-size: 50px;
 }
 
 .navbar {
